--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+# Web + API
 fastapi>=0.110.0
 uvicorn>=0.29.0
 python-dotenv>=1.0.1
 pydantic>=2.6.0
 
+# LLM + Vector Stores
 langchain>=0.1.16
 langchain-openai>=0.1.7
 langchain-community>=0.0.32
@@ -11,5 +13,6 @@ openai>=1.10.0
 tiktoken>=0.6.0
 faiss-cpu>=1.8.0
 
+# Logging & Monitoring
 loguru>=0.7.2
 prometheus-client>=0.20.0
